--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 Flask==3.0.3
 Flask-CORS==4.0.1
-opencv-python>=4.9.0.80
-opencv-contrib-python>=4.9.0.80
-numpy>=1.26.0
-Pillow>=10.3.0
-scikit-image>=0.23.0
-scipy>=1.12.0
-streamlit>=1.32.0
-setuptools>=69.0.0
-wheel>=0.42.0
-
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+Pillow==10.3.0
+scikit-image==0.23.2
+scipy==1.12.0
+face-recognition==1.3.0
+dlib==19.24.2
+cmake==3.29.0
+setuptools==69.5.1
+wheel==0.43.0
+gunicorn==21.2.0
