--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,14 @@
 [phases.setup]
-nixPkgs = ["python312", "gcc", "cmake", "libGL", "glib"]
+nixPkgs = ["python312", "gcc", "cmake", "mesa", "libGL", "glib", "xorg.libXext", "xorg.libSM", "xorg.libXrender", "libgomp"]
+aptPkgs = ["libgl1-mesa-glx", "libglib2.0-0", "libsm6", "libxext6", "libxrender-dev", "libgomp1"]
 
 [phases.install]
 cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
 
 [start]
 cmd = "gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 2 --timeout 120 app:app"
+
+[variables]
+PYTHONUNBUFFERED = "1"
+LD_LIBRARY_PATH = "/nix/store"
 
