--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,8 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
 
 [build.env]
-NIXPACKS_APT_PKGS = "libgl1-mesa-glx libglib2.0-0 libsm6 libxext6 libxrender-dev libgomp1"
+NIXPACKS_APT_PKGS = "libgl1 libglib2.0-0 libsm6 libxext6 libxrender1 libgomp1"
 
 [deploy]
 startCommand = "gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 2 --timeout 120 app:app"
