--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy==1.26.4
 Pillow==10.3.0
 scikit-image==0.23.2
 scipy==1.12.0
+mediapipe==0.10.9
 setuptools==69.5.1
 wheel==0.43.0
 gunicorn==21.2.0
